# Software-Modernization

./: .gitignore  readme.md
.github/workflows/: ci-ecr.yml  cicd.yml  frontend-deploy.yml
backend/scripts/: generate_jwt.sh
backend/services/gql/: main.py  pyproject.toml
backend/services/products/: .env  .gitignore  Dockerfile  config.py  create-products-table.json  docker-compose.yaml  main.py  pyproject.toml
backend/services/products/src/application/: product_service.py
backend/services/products/src/domain/: entities.py  exceptions.py  ports.py
backend/services/products/src/infrastructure/: auth.py  di.py  logging.py
backend/services/products/src/infrastructure/adapters/client/: s3_image_client.py
backend/services/products/src/infrastructure/adapters/db/: dynamodb_repository.py
backend/services/products/src/infrastructure/adapters/http/: health.py  routers.py  schemas.py
backend/services/products/src/infrastructure/middlewares/: exception_handlers.py  prefix_split.py
backend/services/sales/: .dockerignore  .env  Dockerfile  config.py  docker-compose.yaml  main.py  pyproject.toml
backend/services/sellers/: .env  config.py  docker-compose.yaml  main.py  pyproject.toml
frontend/: .env  .gitignore  api-codegen.config.cjs  eslint.config.js  package.json  tsconfig.app.json  tsconfig.build.json  tsconfig.json
frontend/scripts/: generate-api.cjs
frontend/src/: App.tsx  amplify-config.ts  index.css  main.tsx
frontend/src/lib/: errorUtils.ts  (+1 more)
infra/: .gitignore
infra/dev/: backend.tf  main.tf  outputs.tf  ssm-parameters.tf  tfplan  variables.tf
(+80 files in other folders)
