[project]
name = "gql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "strawberry-graphql>=0.275.6",
     "mypy>=1.16.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
]


[tool.mypy]
plugins = ['pydantic.mypy']


[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "uvicorn>=0.35.0",
]
