[project]
name = "products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "mypy>=1.16.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pynamodb>=6.1.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.uv.sources]
core = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "uvicorn>=0.35.0",
]
